--- a/ayuep/app/build.gradle
+++ b/ayuep/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'in.srain.cube:ultra-ptr:1.0.11'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
     testCompile 'junit:junit:4.12'
 }
