--- a/ayuep/app/build.gradle
+++ b/ayuep/app/build.gradle
@@ -23,14 +23,15 @@ android {
 }
 
 dependencies {
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'in.srain.cube:ultra-ptr:1.0.11'
     compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha3'
     testCompile 'junit:junit:4.12'
 }
