--- a/ayuep/app/src/main/AndroidManifest.xml
+++ b/ayuep/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.product.ProductsActivity"></activity>
+        <activity android:name=".ui.product.ProductListActivity"></activity>
         <activity android:name=".ui.product.ProductDetailActivity"></activity>
         <activity android:name=".ui.order.CreateOrderAcitvity"></activity>
     </application>
