--- a/ayuep/app/build.gradle
+++ b/ayuep/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'in.srain.cube:ultra-ptr:1.0.11'
     compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile group: 'com.github.chrisbanes.photoview', name: 'library', version: '1.2.4'
     testCompile 'junit:junit:4.12'
 }
