--- a/ayuep/app/src/main/AndroidManifest.xml
+++ b/ayuep/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".ui.product.PhotoViewActivity"></activity>
         <activity android:name=".ui.order.RegisterCustomerActivity"></activity>
         <activity android:name=".ui.order.CommentActivity"></activity>
+        <activity android:name=".ui.order.CommentsActivity"></activity>
     </application>
 
 </manifest>
