--- a/ayuep/app/build.gradle
+++ b/ayuep/app/build.gradle
@@ -33,5 +33,10 @@ dependencies {
     compile 'in.srain.cube:ultra-ptr:1.0.11'
     compile 'com.bigkoo:convenientbanner:2.0.5'
     compile group: 'com.github.chrisbanes.photoview', name: 'library', version: '1.2.4'
+    compile 'me.iwf.photopicker:PhotoPicker:0.8.5@aar'
+    compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile 'com.android.support:design:24.0.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     testCompile 'junit:junit:4.12'
 }
