--- a/ayuep/app/src/main/AndroidManifest.xml
+++ b/ayuep/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
 
     <application
         android:name=".AYuePApplication"
@@ -30,6 +34,7 @@
         <activity android:name=".ui.order.CommentActivity"></activity>
         <activity android:name=".ui.order.CommentsActivity"></activity>
         <activity android:name=".ui.store.StoreActivity"></activity>
+        <activity android:name=".ui.store.StoreModify"></activity>
         <activity android:name=".ui.store.StoreInfoActivity"></activity>
         <activity android:name=".ui.store.StoreProductsActivity"></activity>
         <activity android:name=".ui.store.StoreOrdersActivity"></activity>
